# FlatCTR

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md
dataset/: test.txt  train.txt  valid.txt
src/: flatctr.cpp  main.cpp
src/include/: common.h  metric.h  util.h
src/include/dataset/: parser.h  sample.h
src/include/model/: base_model.h  fm_model.h  lr_model.h
src/include/worker/: blocking_queue.h
